--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
         <input type="submit">
     </form>
 
-    <p>Este pequeño código será borrado</p>
+    <p>Acabo de escribir esto</p>
 
 </body>
 </html>
