Aclarando sitio web en desarrollo

--- a/contacto.html
+++ b/contacto.html
@@ -16,6 +16,8 @@
     </form>
 
     <p>Acabo de escribir esto</p>
+    <p>Esto es un texto de prueba</p>
+    <h2>Página web en desarrollo...</h2>
 
 </body>
 </html>
