agregando txt random

--- a/contacto.html
+++ b/contacto.html
@@ -18,6 +18,7 @@
     <p>Acabo de escribir esto</p>
     <p>Esto es un texto de prueba</p>
     <h2>Página web en desarrollo...</h2>
+    <p>Mamaguevo digo glu glu glu</p>
 
 </body>
 </html>
